# proofer

./: LICENSE  Makefile  README.md  pyproject.toml  test.mdx  test_with_errors.mdx
proofer/: agent.py  cli.py  config.py  diff.py  display.py  state.py  text_utils.py
scripts/: dev.py  run_ui.py  ui.py
tests/: test_text_utils.py
tests/files/: test_with_errors.md  test_without_errors.md
