[tool.poetry]
name = "proofer"
version = "0.1.1"
description = "A CLI-based agent for proofreading and editing short-form writing"
authors = ["joypauls <joypaulsen3@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/joypauls/proofer"
repository = "https://github.com/joypauls/proofer"
keywords = ["cli", "spellcheck", "editor", "agent", "openai", "proofreading", "langgraph"]

[tool.poetry.scripts]
proofer = "proofer.cli:cli"

[tool.poetry.dependencies]
python = "^3.13"
langgraph = "^0.5.1"
openai = "^1.93.2"
click = "^8.2.1"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
